posting form contents to route

--- a/templates/webpage.html
+++ b/templates/webpage.html
@@ -1,4 +1,4 @@
-<form class="form-horizontal">
+<form class="form-horizontal" method="POST" action="/get-features">
     <fieldset>
     
     <!-- Form Name -->
