--- a/templates/webpage.html
+++ b/templates/webpage.html
@@ -79,5 +79,14 @@
       </div>
     </div>
     
+
+    <!-- Button -->
+<div class="form-group">
+    <label class="col-md-4 control-label" for="submit button"></label>
+    <div class="col-md-4">
+      <button id="submit button" name="submit button" class="btn btn-primary">Submit</button>
+    </div>
+  </div>
+  
     </fieldset>
     </form>
