link to css file

--- a/templates/index.html
+++ b/templates/index.html
@@ -2,7 +2,7 @@
 
 {% block head %}
     <title>Car Evaluator</title>
-    <link rel="stylesheet" href="design.css">
+    <link rel="stylesheet" href="../static/design.css">
 {% endblock %}
 
 {% block body %}
