--- a/templates/index.html
+++ b/templates/index.html
@@ -17,10 +17,10 @@
         <label class="col-md-4 control-label" for="buying">Buying Price</label>
         <div class="col-md-4">
           <select id="buying" name="buying" class="form-control" required>
-            <option value="1">Very High</option>
-            <option value="2">High</option>
-            <option value="3">Medium</option>
-            <option value="4">Low</option>
+            <option value="vhigh">Very High</option>
+            <option value="high">High</option>
+            <option value="med">Medium</option>
+            <option value="low">Low</option>
           </select>
         </div>
       </div>
@@ -30,10 +30,10 @@
         <label class="col-md-4 control-label" for="maint">Maintenance</label>
         <div class="col-md-4">
           <select id="maint" name="maint" class="form-control" required>
-            <option value="1">Very High</option>
-            <option value="2">High</option>
-            <option value="3">Medium</option>
-            <option value="4">Low</option>
+            <option value="vhigh">Very High</option>
+            <option value="high">High</option>
+            <option value="med">Medium</option>
+            <option value="low">Low</option>
           </select>
         </div>
       </div>
@@ -43,10 +43,10 @@
         <label class="col-md-4 control-label" for="doors">Doors</label>
         <div class="col-md-4">
           <select id="doors" name="doors" class="form-control" required>
-            <option value="1">2</option>
-            <option value="2">3</option>
-            <option value="3">4</option>
-            <option value="4">5 or more</option>
+            <option value="2">2</option>
+            <option value="3">3</option>
+            <option value="4">4</option>
+            <option value="5more">5 or more</option>
           </select>
         </div>
       </div>
@@ -56,9 +56,9 @@
         <label class="col-md-4 control-label" for="persons">Persons</label>
         <div class="col-md-4">
           <select id="persons" name="persons" class="form-control" required>
-            <option value="1">2</option>
-            <option value="2">4</option>
-            <option value="3">more</option>
+            <option value="2">2</option>
+            <option value="4">4</option>
+            <option value="more">more</option>
           </select>
         </div>
       </div>
@@ -68,9 +68,9 @@
         <label class="col-md-4 control-label" for="lug_boot">Trunk space</label>
         <div class="col-md-4">
           <select id="lug_boot" name="lug_boot" class="form-control" required>
-            <option value="1">Small</option>
-            <option value="2">Medium</option>
-            <option value="3">Big</option>
+            <option value="small">Small</option>
+            <option value="med">Medium</option>
+            <option value="big">Big</option>
           </select>
         </div>
       </div>
@@ -80,9 +80,9 @@
         <label class="col-md-4 control-label" for="safety">Safety</label>
         <div class="col-md-4">
           <select id="safety" name="safety" class="form-control" required>
-            <option value="1">Low</option>
-            <option value="2">Medium</option>
-            <option value="3">High</option>
+            <option value="low">Low</option>
+            <option value="med">Medium</option>
+            <option value="high">High</option>
           </select>
         </div>
       </div>
