--- a/static/design.css
+++ b/static/design.css
@@ -1,7 +1,7 @@
 .form-group{
-    width: 100%;
-  padding: 12px 20px;
-  margin: 8px 0;
+  width: 50%;
+  padding: 8px 8px;
+  margin: 4px 0;
   display: inline-block;
   border: 1px solid #ccc;
   border-radius: 4px;
@@ -41,3 +41,6 @@
     position: absolute;
     margin: 15px;
  }
+
+ .checked {
+    color: orange;
